# nosqlite

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATING.md  README.md
.github/workflows/: ci.yml
derive/: Cargo.toml
derive/src/: lib.rs
examples/: basic.rs  bench.rs
node/: Cargo.toml  README.md  index.js  odm.js  package-lock.json  package.json
node/src/: lib.rs
node/test/: odm.js  smoke.js  v0_2_0.js
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/src_py/nosqlite/: __init__.py  orm.py
python/tests/: test_orm.py  test_smoke.py  test_v0_2_0.py
src/: aggregate.rs  cursor.rs  database.rs  error.rs  fts.rs  index.rs  io.rs  lib.rs  matcher.rs  ops.rs  query.rs  transaction.rs  typed.rs  update.rs  util.rs  validation.rs
tests/: aggregate.rs  bson.rs  derive.rs  integration.rs  transactions_and_fts.rs  typed.rs  v0_2_0.rs  validation_and_io.rs
