[package]
name = "nosqlite"
version = "0.1.0"
edition = "2021"
description = "MongoDB-style document database backed by SQLite"
license = "MIT"
repository = "https://github.com/sharmatanmay617/nosqlite"
readme = "README.md"
keywords = ["database", "nosql", "mongodb", "sqlite", "json"]
categories = ["database", "data-structures"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
ulid = "1"
thiserror = "1"
bson = { version = "2", optional = true }
nosqlite-derive = { version = "0.1.0", path = "derive", optional = true }

[features]
default = ["derive"]
# Enables `Collection::import_bson_file` for migrating mongodump output.
bson = ["dep:bson"]
# Enables the `#[document]` attribute macro.
derive = ["dep:nosqlite-derive"]

[dev-dependencies]
tempfile = "3"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "bench"
path = "examples/bench.rs"

[[bin]]
name = "nosqlite"
path = "src/bin/nosqlite.rs"
